--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "sugar-high": "^0.6.0"
+    "reading-time": "^1.5.0",
+    "rehype-highlight": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
