--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "setup": "node ./setup.mjs"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "clsx": "^2.1.1",
     "next": "14.1.4",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
     "reading-time": "^1.5.0",
-    "rehype-highlight": "^7.0.0"
+    "rehype-highlight": "^7.0.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
