--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "incremental": true,
     "plugins": [{ "name": "next" }],
     "paths": {
+      "assets/*": ["./assets/*"],
       "app/*": ["./app/*"],
       "components/*": ["./components/*"],
       "lib/*": ["./lib/*"],
