--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "setup": "node ./scripts/setup.mjs"
+    "setup": "node ./scripts/setup.mjs",
+    "release": "standard-version && git push --follow-tags"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
@@ -30,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
