--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "setup": "node ./scripts/setup.mjs",
-    "release": "standard-version && git push --follow-tags"
+    "release": "standard-version && git push --follow-tags --set-upstream origin main"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
